# scarlet-proj-applesilicon

./: .gitignore  .gitmodules  ATTRIBUTION.md  LICENSE  README.md  flake.nix
drivers/audio/apple-mca/: Cargo.toml
drivers/audio/apple-mca/src/: lib.rs
drivers/audio/cs42l83/: Cargo.toml
drivers/audio/cs42l83/src/: lib.rs
drivers/audio/tas5770l/: Cargo.toml
drivers/audio/tas5770l/src/: lib.rs
drivers/clk/apple-nco/: Cargo.toml
drivers/clk/apple-nco/src/: lib.rs
drivers/cpufreq/apple-soc/: Cargo.toml
drivers/cpufreq/apple-soc/src/: apple_soc.rs.original  lib.rs
drivers/display/dcp/: Cargo.toml
drivers/display/dcp/src/: iomfb.rs  lib.rs
drivers/display/dcpext/: Cargo.toml
drivers/display/dcpext/src/: lib.rs
drivers/display/dpxbar/: Cargo.toml
drivers/display/dpxbar/src/: lib.rs
drivers/dma/apple-admac/: Cargo.toml
drivers/dma/apple-admac/src/: lib.rs
drivers/gpio/apple-pinctrl/: Cargo.toml
drivers/gpio/apple-pinctrl/src/: lib.rs
drivers/i2c/apple-i2c/: Cargo.toml
drivers/i2c/apple-i2c/src/: lib.rs
drivers/iommu/apple-dart/: Cargo.toml
drivers/iommu/apple-dart/src/: lib.rs
drivers/nvmem/apple-efuse/: Cargo.toml
drivers/nvmem/apple-efuse/src/: lib.rs
drivers/pcie/apple-pcie/: Cargo.toml
drivers/pcie/apple-pcie/src/: lib.rs
drivers/phy/apple-atcphy/: Cargo.toml
drivers/phy/apple-atcphy/src/: lib.rs
drivers/pic/apple-aic/: Cargo.toml
drivers/pic/apple-aic/src/: fiq.rs  lib.rs
drivers/pic/apple-aic/src/fiq/: registers.rs
drivers/pic/apple-msi/: Cargo.toml
drivers/pic/apple-msi/src/: lib.rs
drivers/soc/apple-afk/: Cargo.toml
drivers/soc/apple-afk/src/: lib.rs
drivers/soc/apple-asc/: Cargo.toml
drivers/soc/apple-asc/src/: lib.rs
drivers/soc/apple-epic/: Cargo.toml
drivers/soc/apple-epic/src/: lib.rs
drivers/soc/apple-pmgr/: Cargo.toml
drivers/soc/apple-pmgr/src/: lib.rs
drivers/soc/apple-rtkit/: Cargo.toml
drivers/soc/apple-rtkit/src/: lib.rs
drivers/soc/apple-smc/: Cargo.toml
drivers/soc/apple-smc/src/: lib.rs
drivers/spi/apple-spi/: Cargo.toml
drivers/spi/apple-spi-hid/: Cargo.toml
drivers/spi/apple-spi-hid/src/: lib.rs
drivers/spi/apple-spi/src/: lib.rs
drivers/spmi/apple-spmi/: Cargo.toml
drivers/spmi/apple-spmi/src/: lib.rs
drivers/uart/s5l-uart/: Cargo.toml
drivers/uart/s5l-uart/src/: lib.rs
drivers/usb/dwc3/apple-dwc3/: Cargo.toml
drivers/usb/dwc3/apple-dwc3/src/: lib.rs
drivers/usb/typec/apple-cd321x/: Cargo.toml
drivers/usb/typec/apple-cd321x/src/: lib.rs
drivers/video/apple-avd/: Cargo.toml  build.rs
drivers/video/apple-avd/src/: common.rs  debug.rs  debug_device.rs  firmware.rs  h264.rs  lib.rs  vp9.rs  vvideo.rs
drivers/watchdog/apple-wdt/: Cargo.toml
drivers/watchdog/apple-wdt/src/: lib.rs
firmware/apple-avd-fw-rs/: .gitignore  Cargo.toml  README.md  memory.x
firmware/apple-avd-fw-rs/.cargo/: config.toml
firmware/apple-avd-fw-rs/scripts/: build-all.sh
firmware/apple-avd-fw-rs/src/: abi.rs  irq.rs  mailbox.rs  main.rs  tunables.rs  vector.rs
kernel/src/drivers/cpufreq/: apple_soc.rs
projects/aarch64-apple-limine-full/: DEPLOY.md  build-uboot.sh  scarlet.toml
projects/aarch64-apple-limine-full/bsp/: Cargo.toml  aarch64-unknown-none-elf.json
projects/aarch64-apple-limine-full/bsp/.cargo/: config.toml
projects/aarch64-apple-limine-full/bsp/lds/: aarch64_limine.ld
projects/aarch64-apple-limine-full/bsp/src/: main.rs
projects/aarch64-apple-limine-full/bsp/src/archive/: apple_serror.rs  platform_apple.rs  platform_mod.rs
projects/aarch64-apple-limine-full/patches/u-boot/: 0001-apple-m1-boot-ram-backed-scarlet-image.patch  README.md
projects/aarch64-apple-limine-full/rootfs/system/scarlet/root/: .shrc
projects/aarch64-apple-limine-full/tools/: apple_avd_dtb.py  apple_boot_payload.py  deploy_m1n1_usb.py  run.sh  test_apple_boot_payload.py  test_deploy_m1n1_usb.py
