[package]
name = "scarlet-driver-apple-avd"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
path = "src/lib.rs"

[features]
debug-device = []

[dependencies]
scarlet = { git = "https://github.com/petitstrawberry/Scarlet", rev = "5d331d8d8f5ca8be72a75fb3155d88b80445e53f", package = "scarlet", default-features = false }
scarlet-driver-apple-pmgr = { path = "../../soc/apple-pmgr" }
