[package]
name = "scarlet-driver-apple-dwc3"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
scarlet = { git = "https://github.com/petitstrawberry/Scarlet", branch = "dev", package = "scarlet", default-features = false }
scarlet-driver-apple-atcphy = { path = "../../../phy/apple-atcphy" }
